# prest

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  images  osx-launcher.command  paper.bib  update-version.sh  version.txt
.github/composite/rust/: action.yml
.github/workflows/: main.yml
core/: Cargo.toml  LICENSE
core/src/: alt.rs  alt_set.rs  approximate_estimation.rs  args.rs  benches.rs  codec.rs  consistency.rs  csv.rs  estimation.rs  experiment_stats.rs  fast_preorder.rs  graph.rs  instviz.rs  integer.rs  integrity.rs  lib.rs  linear_preorders.rs  matrix.rs  model.rs  precomputed.rs  preorder.rs  rpc.rs  rpc_common.rs  set_cover.rs  simulation.rs  void.rs
core/src/budgetary/: consistency.rs
docs/: .gitignore  Makefile  make.bat
docs/src/: conf.py  conf.py.bak  index.rst  index.rst.bak  references-empirics.bib  references-theory.bib  references.bib  references.bib.bak  references.rst  references.rst.bak  references_comp.bib  references_psych.bib  references_theory.bib
docs/src/_static/: my_theme.css
docs/src/_static/example-datasets/: budgetary.csv  estimation-models-no-defaults.csv  general-defaults.csv  general-hybrid.csv  general-no-defaults.csv
docs/src/_static/examples/: estimation-models-defaults.csv  general-defaults-128.csv  general-merging.csv  general-no-defaults-128.csv  general-stochastic-consistency.csv  integrity.csv
docs/src/acknowledgements/: index.rst
docs/src/consistency/: cons_budgetary.rst  cons_general.rst  cons_general_det.rst  cons_general_stoch.rst  index.rst  index.rst.bak
docs/src/copyright/: index.rst
docs/src/estimation/: index.rst
docs/src/extensions/: google_analytics.py
docs/src/history/: history.rst  index.rst  index.rst.bak
docs/src/models/: default.rst  default.rst.bak  fc.rst  fc.rst.bak  index.rst  index.rst.bak  nfc.rst  nfc.rst.bak
docs/src/notation/: datasets.rst  index.rst  preferences.rst  revealed.rst
docs/src/privacy/: index.rst
docs/src/simulations/: index.rst  index.rst.bak
docs/src/workspace/: index.rst  index.rst.bak
gui/: .flake8  .gitignore  Makefile  branding.py  cli.py  core.py  doc.py  main.py  model.py  mypy.ini  platform_specific.py  prest-core  pyproject.toml  pytest.ini  requirements.txt  simulation.py  workspace.py
gui/dataset/: __init__.py  aggregated_preferences.py  budgetary.py  budgetary_consistency.py  consistency_result.py  deterministic_consistency_result.py  estimation_result.py  experiment_stats.py  experimental_data.py  integrity_check.py  stochastic_consistency_result.py  tuple_intrans_alts.py  tuple_intrans_menus.py
gui/gui/: __init__.py  about.py  aggregate.py  copycat_simulation.py  estimation.py  gen_choices.py  gen_menus.py  import_csv.py  main_window.py  progress.py  simulation.py  subject_filter.py
gui/test/: __init__.py  codec_test.py  integration_test.py  merging_test.py  packed_list_test.py  simulation_test.py
gui/test/expected/: budgetary-cycles.csv  budgetary-summary.csv  estimation-models-defaults-cons-binint.csv  estimation-models-defaults-cons-garp.csv  estimation-models-defaults-cons-summary.csv  estimation-models-defaults-models-compact.csv  estimation-models-defaults-models-detailed.csv  estimation-models-defaults-stochastic.csv  estimation-models-no-defaults-cons-garp-bin.csv  estimation-models-no-defaults-cons-garp.csv  estimation-models-no-defaults-cons-sarp-bin.csv  estimation-models-no-defaults-cons-sarp.csv  estimation-models-no-defaults-cons-summary.csv  estimation-models-no-defaults-models-compact.csv  estimation-models-no-defaults-models-detailed.csv  estimation-models-no-defaults-stochastic.csv  general-defaults-128-cons-binint.csv  general-defaults-128-cons-garp.csv  general-defaults-128-cons-sarp-bin.csv  general-defaults-128-cons-summary.csv  general-defaults-128-models-compact.csv  general-defaults-128-models-detailed.csv  general-defaults-128-stochastic.csv  general-defaults-cons-garp-bin.csv  general-defaults-cons-garp.csv  general-defaults-cons-summary.csv  general-hybrid-cons-sarp-bin.csv  general-hybrid-cons-sarp.csv  general-hybrid-cons-summary.csv  general-hybrid-models-compact.csv  general-hybrid-models-detailed.csv  general-hybrid-stochastic.csv  general-merging-cons-garp-bin.csv  general-merging-cons-sarp.csv  general-merging-cons-summary.csv  general-merging-models-compact.csv  general-merging-models-detailed.csv  general-merging-stochastic.csv  general-no-defaults-128-cons-garp-bin.csv  general-no-defaults-128-cons-garp.csv  (+9 more)
gui/uic/: Makefile  __init__.py  about.ui  aggregate.ui  copycat_simulation.ui  estimation.ui  gen_choices.ui  gen_menus.ui  import_csv.ui  main_window.ui  progress.ui  simulation.ui  subject_filter.ui  view_dataset.ui  view_estimated.ui
gui/util/: codec.py  codec_progress.py  packed_list.py  tee.py  tree_model.py
paper/: paper.bib  paper.md
prest-build/: README.md  build-core-win.sh  build-linux.sh  build-mac.sh  build.sh  dbx-pull.sh  dbx-push.sh  licenses.sh  logs.sql  salvage-logs.py  setup-for-mac.sh  sign.sh  tag-version.sh  www-deploy.sh
prest-core/: Cargo.toml
prest-core/src/: lib.rs  rpc.rs
prest-lib/: Cargo.toml
prest-lib/src/: aggregate_preferences.rs  alt.rs  alt_set.rs  approximate_estimation.rs  codec.rs  common.rs  consistency.rs  csv.rs  estimation.rs  experiment_stats.rs  graph.rs  instviz.rs  integrity.rs  lib.rs  linear_preorders.rs  matrix.rs  model.rs  precomputed.rs  preorder.rs  simulation.rs  void.rs  winners.rs
prest-lib/src/budgetary/: consistency.rs  mod.rs
prest-lib/src/consistency/: deterministic.rs  mod.rs  stochastic.rs
test/: __init__.py
travis-ci/: linux-build.sh  linux-install-deps.sh  osx-build.sh  osx-install-deps.sh  windows-build.sh  windows-install-deps.sh
