[package]
name = "prest"
version = "0.9.11"
authors = [
	"Georgios Gerasimou <giorgosgerasimou@hotmail.com>",
	"Matus Tejiscak <ziman@functor.sk>"
]
description = "Preference estimation from choice data."
documentation = "https://prestsoftware.com"
homepage = "https://prestsoftware.com"
repository = "https://github.com/prestsoftware/prest"
license = "BSD-3-Clause"

[dependencies]
argparse = "*"
rand = "0.6"
base64 = "*"
byteorder = "*"
num = "*"
rayon = "*"
#nalgebra = "*"
#log = "*"

[lib]
path = "src/lib.rs"

# vim: ft=cfg
