[tool.poetry]
name = "prest-gui"
version = "1.1.1"
description = "The GUI frontend of Prest"
authors = ["Matus Tejiscak <ziman@functor.sk>, Georgios Gerasimou <gerasimou@outlook.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "prest_gui"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
openpyxl = "^3.1.1"
pytest = "^7.2.2"
tqdm = "^4.65.0"
PyQt5 = "^5.15.9"
Sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
sphinxcontrib-bibtex = "^2.5.0"
sphinxcontrib-websupport = "^1.2.4"
"sphinxjp.themes.basicstrap" = "^0.5.0"
sphinx-mathjax-offline = "^0.0.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
hypothesis = "^6.68.2"
pyinstaller = "^5.8.0"
PyQt5-stubs = "^5.15.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
