[package]
name = "prest_core"
version = "1.1.0"
authors = [
	"Georgios Gerasimou <giorgosgerasimou@hotmail.com>",
	"Matus Tejiscak <ziman@functor.sk>"
]
description = "Preference estimation from choice data."
documentation = "https://prestsoftware.com"
homepage = "https://prestsoftware.com"
repository = "https://github.com/prestsoftware/prest"
license = "BSD-3-Clause"

[dependencies]
prest = { path = "../prest-lib", version = "*" }
argparse = "*"
rand = "*"
csv = "*"
byteorder = "*"
base64 = "*"

[lib]
path = "src/lib.rs"
