[package]
name = "prest_core"
version = "1.2.0"
authors = [
	"Georgios Gerasimou <gerasimou@outlook.com>",
	"Matus Tejiscak <ziman@functor.sk>"
]
description = "Preference estimation from choice data."
documentation = "https://prestsoftware.com"
homepage = "https://prestsoftware.com"
repository = "https://github.com/prestsoftware/prest"
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
prest = { path = "../prest-lib", version = "*" }
argparse = "*"
rand = "*"
csv = "*"
byteorder = "*"
base64 = "*"

[lib]
path = "src/lib.rs"
