[package]
name = "prest_core"
version = "1.2.0"
authors = [
	"Georgios Gerasimou <gerasimou@outlook.com>",
	"Matus Tejiscak <ziman@functor.sk>"
]
description = "Preference estimation from choice data."
documentation = "https://prestsoftware.com"
homepage = "https://prestsoftware.com"
repository = "https://github.com/prestsoftware/prest"
license = "BSD-3-Clause"
edition = "2024"

[dependencies]
prest = { path = "../prest-lib", version = "*" }
argparse = ">=0.2.2"
rand = ">=0.9.0"
csv = ">=1.3.1"
byteorder = ">=1.5.0"
base64 = ">=0.22.1"

[lib]
path = "src/lib.rs"
