[package]
name = "prest"
version = "1.1.0"
authors = [
	"Georgios Gerasimou <giorgosgerasimou@hotmail.com>",
	"Matus Tejiscak <ziman@functor.sk>"
]
description = "Preference estimation from choice data."
documentation = "https://prestsoftware.com"
homepage = "https://prestsoftware.com"
repository = "https://github.com/prestsoftware/prest"
license = "BSD-3-Clause"
edition = "2024"

[dependencies]
rand = { version = "*", features = ["small_rng"] }
base64 = "*"
byteorder = "*"
num = "*"
num-bigint = "*"
num-rational = "*"
num-integer = "*"
num-traits = "*"
rayon = "*"
csv = "*"
itertools = "*"

[lib]
path = "src/lib.rs"

[features]
bench = []
